workspace = { members = ["Chrono", "Log", "Rand", "Tracing"] }
[package]
name = "grasp-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
